// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: false,\\n  isError: true,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: danger) 1`] = `
<DocumentFragment>
  <kol-badge
    _color="#bb2124"
    _label="Ich wäre eine Fehlermeldung; sie sollte aber nur im Fehlerfall zu sehen sein"
  />
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: false,\\n  isError: true,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: info) 1`] = `
<DocumentFragment>
  <kol-badge
    _color="#5bc0de"
    _label="Ich wäre eine Fehlermeldung; sie sollte aber nur im Fehlerfall zu sehen sein"
  />
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: false,\\n  isError: true,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: success) 1`] = `
<DocumentFragment>
  <kol-badge
    _color="#22bb33"
    _label="Ich wäre eine Fehlermeldung; sie sollte aber nur im Fehlerfall zu sehen sein"
  />
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: false,\\n  isError: true,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: undefined) 1`] = `
<DocumentFragment>
  <kol-badge
    _color="#f0ad4e"
    _label="Ich wäre eine Fehlermeldung; sie sollte aber nur im Fehlerfall zu sehen sein"
  />
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: false,\\n  isError: true,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: warning) 1`] = `
<DocumentFragment>
  <kol-badge
    _color="#f0ad4e"
    _label="Ich wäre eine Fehlermeldung; sie sollte aber nur im Fehlerfall zu sehen sein"
  />
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: true,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: danger) 1`] = `
<DocumentFragment>
  <div>
    Ich sollte nur im Erfolgsfall zu sehen sein
  </div>
  <div>
    Das wären die Daten, die aber maximal im Kindelement zu sehen sein sollten
  </div>
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: true,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: info) 1`] = `
<DocumentFragment>
  <div>
    Ich sollte nur im Erfolgsfall zu sehen sein
  </div>
  <div>
    Das wären die Daten, die aber maximal im Kindelement zu sehen sein sollten
  </div>
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: true,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: success) 1`] = `
<DocumentFragment>
  <div>
    Ich sollte nur im Erfolgsfall zu sehen sein
  </div>
  <div>
    Das wären die Daten, die aber maximal im Kindelement zu sehen sein sollten
  </div>
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: true,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: undefined) 1`] = `
<DocumentFragment>
  <div>
    Ich sollte nur im Erfolgsfall zu sehen sein
  </div>
  <div>
    Das wären die Daten, die aber maximal im Kindelement zu sehen sein sollten
  </div>
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: false,\\n  isSuccess: true,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: warning) 1`] = `
<DocumentFragment>
  <div>
    Ich sollte nur im Erfolgsfall zu sehen sein
  </div>
  <div>
    Das wären die Daten, die aber maximal im Kindelement zu sehen sein sollten
  </div>
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: true,\\n  isSuccess: false,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: danger) 1`] = `
<DocumentFragment>
  <kol-spin
    _show=""
  />
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: true,\\n  isSuccess: false,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: info) 1`] = `
<DocumentFragment>
  <kol-spin
    _show=""
  />
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: true,\\n  isSuccess: false,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: success) 1`] = `
<DocumentFragment>
  <kol-spin
    _show=""
  />
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: true,\\n  isSuccess: false,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: undefined) 1`] = `
<DocumentFragment>
  <kol-spin
    _show=""
  />
</DocumentFragment>
`;

exports[`QueryBoundary renders correctly: {\\n  getErrorMessage: [Function: getErrorMessage] { [length]: 0, [name]: 'getErrorMessage' },\\n  isFetching: true,\\n  isSuccess: false,\\n  isError: false,\\n  getData: [Function: getData] { [length]: 0, [name]: 'getData' }\\n} (Badge: warning) 1`] = `
<DocumentFragment>
  <kol-spin
    _show=""
  />
</DocumentFragment>
`;
